<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        app:cardCornerRadius="13dp"
        app:cardElevation="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clCardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/namecard_background">

            <TextView
                android:id="@+id/tv_hey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/roboto"
                android:text="@string/hey"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/rachel_mcadams"
                android:textColor="@color/white"
                android:textSize="21sp"
                app:layout_constraintStart_toStartOf="@+id/tv_hey"
                app:layout_constraintTop_toBottomOf="@+id/tv_hey" />

            <TextView
                android:id="@+id/tv_rollno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/todo"
                android:textColor="#252525"
                app:layout_constraintStart_toStartOf="@+id/tv_name"
                app:layout_constraintTop_toBottomOf="@+id/tv_name" />

            <TextView
                android:id="@+id/tv_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/todo"
                android:textColor="#252525"
                app:layout_constraintStart_toStartOf="@+id/tv_rollno"
                app:layout_constraintTop_toBottomOf="@+id/tv_rollno" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:src="@drawable/rachel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/todo" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>